test/tests/errors/error-record-non-unique-ids2.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = record(x: int, x: int);
}